package aris;

message Command {
  required CommandType type = 1;

  enum CommandType {
    SET_DATETIME = 0;
    SET_FRAMESTREAM_RECEIVER = 1;
    SET_FRAMESTREAM_SETTINGS = 2;
    SET_ACOUSTICS = 3;
    SET_SALINITY = 4;
    SET_TELEPHOTO = 5;
    SET_FOCUS = 6;
    FORCE_FOCUS = 7;
    HOME_FOCUS = 8;
    SET_ROTATOR_MOUNT = 9;
    SET_ROTATOR_VELOCITY = 10;
    SET_ROTATOR_ACCELERATION = 11;
    SET_ROTATOR_POSITION = 12;
    STOP_ROTATOR = 13;
    PING = 14;
    SET_SYSLOG_RECEIVER = 15;
    POWER_DOWN = 16;  // For internal use by Sound Metrics only
  }

  optional SetDateTime dateTime = 2;
  optional SetFrameStreamReceiver frameStreamReceiver = 3;
  optional SetFrameStreamSettings frameStreamSettings = 4;
  optional SetAcousticSettings settings = 5;
  optional SetSalinity salinity = 6;
  optional SetTelephotoLens telephoto = 7;
  optional SetFocusPosition focusPosition = 8;
  optional ForceFocus focusForce = 9;
  optional HomeFocus focusHome = 10;
  optional SetRotatorMount mount = 11;
  optional SetRotatorVelocity rotatorVelocity = 12;
  optional SetRotatorAcceleration rotatorAcceleration = 13;
  optional SetRotatorPosition rotatorPosition = 14;
  optional StopRotator rotatorStop = 15;
  optional Ping ping = 16;
  optional SetSyslogReceiver syslogReceiver = 17;
  optional PowerDown powerDown = 18;

  message SetDateTime {
    optional string dateTime = 1; 
  }

  // Sets the address and port of the target machine to which frames are sent.
  // This is always set immediately upon connecting to ARIS and can change over
  // the course of a session in a tethered diver-held environment.
  // Sending an IP address of 0.0.0.0 closes down the network frame stream.
  message SetFrameStreamReceiver {
    optional uint32 port = 1;
    optional string ip = 2;
  }

  message SetFrameStreamSettings {
    enum PacketLossMitigation {
      DROP_PARTIAL_FRAMES = 0;    // Any missing packet causes the frame to be lost. Easy, fast,
                                  // lossy in noisy environments.

      PESSIMISTIC_RETRY = 1;  // Waits for ACK before continuing to the next packet; retries
                              // missing packets until connection terminates; drops oldest frames
                              // from outgoing queue (but not the one in progress).
    }

    optional SetInterpacketDelay interpacketDelay = 1;
    optional PacketLossMitigation packetLossMitigation = 2;
  }

  message SetInterpacketDelay {
    optional bool enable = 1;

    // The delay is specified in microseconds.
    optional uint32 delayPeriod = 2;
  }

  message SetAcousticSettings {
    enum Frequency {
      LOW = 0;
      HIGH = 1;
    }

    optional uint32 cookie = 1;
    optional float frameRate = 2;
    optional uint32 samplesPerBeam = 3;
    optional uint32 sampleStartDelay = 4;
    optional uint32 cyclePeriod = 5;
    optional uint32 samplePeriod = 6;
    optional uint32 pulseWidth = 7;
    optional uint32 pingMode = 8;
    optional bool enableTransmit = 9;
    optional Frequency frequency = 10;
    optional bool enable150Volts = 11;
    optional float receiverGain = 12;
  }

  message SetSalinity {
    enum Salinity {
      FRESH = 0;
      BRACKISH = 15;
      SALTWATER = 35;
    }

    optional Salinity salinity = 1;
  }

  message SetTelephotoLens {
    optional bool telephoto = 1;
  }

  message SetFocusPosition {
    optional uint32 position = 1;
  }  

  message ForceFocus {
    enum Direction {
      FORWARD = 1;
      REVERSE = 2;
    }

    optional Direction direction = 1;
  }

  message HomeFocus {}

  message SetRotatorMount {
    enum Mount {
      POLE = 0;
      TRIPOD = 1;
      ROV = 2;
    }

    optional Mount mount = 1;
  }

  enum Axis {
    PAN = 0;
    ROLL = 1;
    TILT = 2;
  }

  message SetRotatorVelocity {
    optional Axis axis = 1;
    optional float velocity = 2;
  }

  message SetRotatorAcceleration {
    optional Axis axis = 1;
    optional float acceleration = 2;
  }

  message SetRotatorPosition {
    optional Axis axis = 1;
    optional float position = 2;
  }

  message StopRotator {
    optional Axis axis = 1;
  }

  message Ping {
  }

  message SetSyslogReceiver {
    optional string ip = 1;
  }

  // For internal use by Sound Metrics only
  message PowerDown {
  }
}
